tous les element placer

--- a/index.html
+++ b/index.html
@@ -11,17 +11,47 @@
 <head>
     <nav>
         <ul id="navigation" >
+           <div class="liste logo"><img src="img/logo.png" alt=""></div>
             <li class="liste"><a href="#">Home</a></li>
-            <li class="liste"><a href="#">Page</a></li>
+            <li class="liste"><a href="#">Pages</a></li>
             <li class="liste"><a href="#" >Features</a></li>
             <li class="liste"><a href="#">Extensions</a></li>
             <li class="liste"><a href="#">Tutorials</a></li>
             <li class="liste"><a href="#">Contact us</a></li>
+            <li class="liste"><a href="#"><img src="img/twitter.png" alt=""></a></li>
+            <li class="liste"><a href="#"><img src="img/facebook.png" alt=""></a></li>
+            <li class="liste"><a href="#" ><img src="img/messenger.png" alt=""></a></li>
+            <li class="liste"><a href="#" ><img src="img/linkedin.png" alt=""></a></li>
+        
         </ul>
-    </nav>
-
+            <h1 class="le_titre_creatives">creatives</h1>
+            <p class="scroll_down">Scroll Down</p>
+           <a href="#"><img src="img/fleche.png" alt="fleche_scroll" class="fleche"></a>
+           <a href="#"><img src="img/ellipse.png" alt="" class="ellipse"></a>
 </head>
     </header>
+    <section class="background_color_red">
+        <div class="we_are">we are an awesome agency</div>
+        <img class="w" src="img/w.png" alt="">
+        <div class="colone">
+            <div>
+                <h4 class=" icone_one">feature one</h4>
+                <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis</p>
+            </div>
+            <div
+            ><h4 class="icone_two">feature two</h4>
+            <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis</p>
+            </div>
+            <div>
+                <h4 class="icone_three">feature three</h4>
+                <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis</p>
+            </div>
+            <div>
+                <h4 class="icone_four">feature four</h4>
+                <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis</p>
+            </div>
+        </div>
+    </section>
     <!-- fin du code Anais  -->
 </body>
 </html>
