--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <div class="we_are">we are an awesome agency</div>
         <img class="w" src="img/w.png" alt="">
         <div class="colone">
-            <div>
+            <div class="division">
                 <h4 class=" icone_one">feature one</h4>
                 <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis</p>
             </div>
-            <div
-            ><h4 class="icone_two">feature two</h4>
+            <div class="division ">
+                <h4 class="icone_two">feature two</h4>
             <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis</p>
             </div>
-            <div>
+            <div class="division ">
                 <h4 class="icone_three">feature three</h4>
                 <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis</p>
             </div>
-            <div>
+            <div class="division ">
                 <h4 class="icone_four">feature four</h4>
                 <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis</p>
             </div>
