--- a/index.html
+++ b/index.html
@@ -1,57 +1,71 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width:1100px)" href="petite_resolution.css">
     <title>creatives</title>
 </head>
 <body>
     <!-- debut code de Anais  -->
     <header class="background_header">
-<head>
+        <img  class="menu" src="img/menu.png">
     <nav>
-        <ul id="navigation" >
-           <div class="liste logo"><img src="img/logo.png" alt=""></div>
+        <div class=" logo"><img src="img/logo.png" alt=""></div>
+        <ul class="navigation">
+           
             <li class="liste"><a href="#">Home</a></li>
             <li class="liste"><a href="#">Pages</a></li>
-            <li class="liste"><a href="#" >Features</a></li>
+            <li class="liste"><a href="#">Features</a></li>
             <li class="liste"><a href="#">Extensions</a></li>
             <li class="liste"><a href="#">Tutorials</a></li>
             <li class="liste"><a href="#">Contact us</a></li>
             <li class="liste"><a href="#"><img src="img/twitter.png" alt=""></a></li>
             <li class="liste"><a href="#"><img src="img/facebook.png" alt=""></a></li>
-            <li class="liste"><a href="#" ><img src="img/messenger.png" alt=""></a></li>
-            <li class="liste"><a href="#" ><img src="img/linkedin.png" alt=""></a></li>
+            <li class="liste"><a href="#"><img src="img/messenger.png" alt=""></a></li>
+            <li class="liste"><a href="#"><img src="img/linkedin.png" alt=""></a></li>
         
         </ul>
             <h1 class="le_titre_creatives">creatives</h1>
             <p class="scroll_down">Scroll Down</p>
-           <a href="#"><img src="img/fleche.png" alt="fleche_scroll" class="fleche"></a>
-           <a href="#"><img src="img/ellipse.png" alt="" class="ellipse"></a>
-</head>
-    </header>
+            <div class="ellipse">
+           <a href="#"><img src="img/ellipse.png" alt="" ></a>
+        </div>
+    </nav>
+</header>
+
     <section class="background_color_red">
         <div class="we_are">we are an awesome agency</div>
-        <img class="w" src="img/w.png" alt="">
+       <div class="w">w</div>
         <div class="colone">
             <div class="division">
+                <a href="#">
                 <h4 class=" icone_one">feature one</h4>
-                <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis</p>
+                <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor</p>
+            </a>
             </div>
             <div class="division ">
+                <a href="#">
                 <h4 class="icone_two">feature two</h4>
-            <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis</p>
+            <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor</p>
+        </a>
             </div>
             <div class="division ">
+                <a href="#">
                 <h4 class="icone_three">feature three</h4>
-                <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis</p>
+                <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor</p>
+            </a>
             </div>
             <div class="division ">
-                <h4 class="icone_four">feature four</h4>
-                <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis</p>
+                    <a href="#">
+                        <h4 class="icone_four">feature four</h4>
+                        <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor</p>
+                    </a>
             </div>
         </div>
     </section>
     <!-- fin du code Anais  -->
+
 </body>
 </html>
