--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
                   </div>
                 <center>
                     <font size=2 color="red">
-                        <p>FRESH SUMMER COMPAIGN</p>
+                        <p class="titre_red">FRESH SUMMER COMPAIGN</p>
                     </font>
                 </center>
                 <center>
-                    <p>Cum sociis natoque penatibus et magnis <br>dis parturient montes, nascetur ridiculus<br> mus. Lorem ipsum
+                    <p class="hiill">Cum sociis natoque penatibus et magnis <br>dis parturient montes, nascetur ridiculus<br> mus. Lorem ipsum
                         dolor sit amet,<br> consectetur adipiscing elit. Donec sed <br>odio dui. Vivamus sagittis lacus vel augue<br>
                         laoreet rutrum faucibus dolor auctor.</p>
                 </center>
@@ -151,11 +151,11 @@
     
                 <center>
                     <font size=2 color="red">
-                        <p>FRESH SUMMER COMPAIGN</p>
+                        <p class="hiill">FRESH SUMMER COMPAIGN</p>
                     </font>
                 </center>
                 <center>
-                    <p>Cum sociis natoque penatibus et magnis <br>dis parturient montes, nascetur ridiculus<br> mus. Lorem ipsum
+                    <p class="hiill">Cum sociis natoque penatibus et magnis <br>dis parturient montes, nascetur ridiculus<br> mus. Lorem ipsum
                         dolor sit amet,<br> consectetur adipiscing elit. Donec sed <br>odio dui. Vivamus sagittis lacus vel augue<br>
                         laoreet rutrum faucibus dolor auctor.</p>
                 </center>
@@ -173,11 +173,11 @@
                 </div>
                 <center>
                     <font size=2 color="red">
-                        <p>FRASH SUMMER COMPAIGN</p>
+                        <p class="hiill">FRASH SUMMER COMPAIGN</p>
                     </font>
                 </center>
-                <center>
-                    <p>Cum sociis natoque penatibus et magnis <br>dis parturient montes, nascetur ridiculus<br> mus. Lorem ipsum
+                <center">
+                    <p class="hiill">Cum sociis natoque penatibus et magnis <br>dis parturient montes, nascetur ridiculus<br> mus. Lorem ipsum
                         dolor sit amet,<br> consectetur adipiscing elit. Donec sed <br>odio dui. Vivamus sagittis lacus vel augue<br>
                         laoreet rutrum faucibus dolor auctor.</p>
                 </center>
@@ -195,11 +195,11 @@
                 </div>
                 <center>
                     <font size=2 color="red">
-                        <p>FRESH SUMMER COMPAIGN</p>
+                        <p class="hiill">FRESH SUMMER COMPAIGN</p>
                     </font>
                 </center>
                 <center>
-                    <p>Cum sociis natoque penatibus et magnis <br>dis parturient montes, nascetur ridiculus<br> mus. Lorem ipsum
+                    <p class="hiill">Cum sociis natoque penatibus et magnis <br>dis parturient montes, nascetur ridiculus<br> mus. Lorem ipsum
                         dolor sit amet,<br> consectetur adipiscing elit. Donec sed <br>odio dui. Vivamus sagittis lacus vel augue<br>
                         laoreet rutrum faucibus dolor auctor.</p>
                 </center>
