fin de modification

--- a/index.html
+++ b/index.html
@@ -41,26 +41,26 @@
         <div class="colone">
             <div class="division">
                 <a href="#">
-                <h4 class=" icone_one">feature one</h4>
-                <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor</p>
+                <h4 class=" icone_one titreh4">feature one</h4>
+                <p class="paragraphe" >Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor</p>
             </a>
             </div>
             <div class="division ">
                 <a href="#">
-                <h4 class="icone_two">feature two</h4>
-            <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor</p>
+                <h4 class="icone_two titreh4">feature two</h4>
+            <p class="paragraphe" >Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor</p>
         </a>
             </div>
             <div class="division ">
                 <a href="#">
-                <h4 class="icone_three">feature three</h4>
-                <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor</p>
+                <h4 class="icone_three titreh4">feature three</h4>
+                <p class="paragraphe">Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor</p>
             </a>
             </div>
             <div class="division ">
                     <a href="#">
-                        <h4 class="icone_four">feature four</h4>
-                        <p>Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor</p>
+                        <h4 class="icone_four titreh4">feature four</h4>
+                        <p class="paragraphe">Aenean lacinia bibendum nulla sed consectetur. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor</p>
                     </a>
             </div>
         </div>
