--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </section>
 
     <section id="partie2">
-<div class="b">
+<div class="grandb">
     <img src="img/B.png">
 </div>
 <div class="letsblog"> <p>Let's blog</p>
