--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
             
         </div>
                 <div class="box">
-                    <img src="img/Layer 88.jpg" alt="mon image">
+                   <div class="haut"> <img src="img/Layer 88.jpg" alt="mon image">
                 </div>
-
+            </div>
                 <div class="box2">
-                    <img src="img/Layer 90.jpg" alt="mon image">
+                    <div class="bas"><img src="img/Layer 90.jpg" alt="mon image">
                 </div>
+            </div>
                 <div class="fulltext2">
            
                     <p class="text2">Oct 12, 2020 | In Culture</p>
